# ArtisanGemstoneIMS.Application/PurchaseOrders/BasePurchaseOrderValidator.cs
@@ -1,0 +1,12 @@
+﻿using ArtisanGemstoneIMS.WebUI.Shared.PurchaseOrders;
+using FluentValidation;
+
+namespace ArtisanGemstoneIMS.Application.PurchaseOrders;
+
+public class BasePurchaseOrderValidator : AbstractValidator<BasePurchaseOrderDto>
+{
+    public BasePurchaseOrderValidator()
+    {
+        
+    }
+}
